Fixed href and ids

--- a/Base Code/index.html
+++ b/Base Code/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Calculator</title>
-		<link rel="stylesheet" href="style.css" />
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-		<script src="script.js"></script>
-	</head>
-	<body>
-		<div id="calculator">
-			<div id="total">
-			</div>
-			<div id="operators">
-				<a href="javascript:void(0)" id="plus">+</a>
-				<a href="javascript:void(0)" id="minus">-</a>
-				<a href="javascript:void(0)" id="divide">/</a>
-				<a href="javascript:void(0)" id="multiply">*</a>
-				<a href="javascript:void(0)" id="equals">=</a>
-			</div>
-			<div id="numbers">
-				<a href="javascript:void(0)" id="one">1</a>
-				<a href="javascript:void(0)" id="two">2</a>
-				<a href="javascript:void(0)" id="three">3</a>
-				<a href="javascript:void(0)" id="four">4</a>
-				<a href="javascript:void(0)" id="five">5</a>
-				<a href="javascript:void(0)" id="six">6</a>
-				<a href="javascript:void(0)" id="seven">7</a>
-				<a href="javascript:void(0)" id="eight">8</a>
-				<a href="javascript:void(0)" id="nine">9</a>
-				<a href="javascript:void(0)" id="clear">C</a>
-				<a href="javascript:void(0)" id="zero">0</a>
-				<a href="javascript:void(0)" id="clearall">AC</a>
-			</div>
-		</div>
-	</body>
+    <head>
+        <title>Calculator</title>
+        <link rel="stylesheet" href="style.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+        <script src="script.js"></script>
+    </head>
+    <body>
+        <div id="calculator">
+            <div id="total">
+            </div>
+            <div id="operators">
+                <a>+</a>
+                <a>-</a>
+                <a>/</a>
+                <a>*</a>
+            </div>
+            <div id="numbers">
+                <a>1</a>
+                <a>2</a>
+                <a>3</a>
+                <a>4</a>
+                <a>5</a>
+                <a>6</a>
+                <a>7</a>
+                <a>8</a>
+                <a>9</a>
+                <a id="clear">C</a>
+                <a>0</a>
+                <a id="clearall">AC</a>
+            </div>
+        </div>
+    </body>
 </html>
